ensure arrow colour matches light / dark mode

--- a/tbx/static_src/sass/components/_tabs.scss
+++ b/tbx/static_src/sass/components/_tabs.scss
@@ -77,6 +77,7 @@
         height: 22px;
         opacity: 0;
         transition: opacity $transition-quick;
+        color: var(--color--text);
 
         @include reduced-motion() {
             transition: none;
